# reels

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/reels-core/: Cargo.toml
crates/reels-core/src/: lib.rs  router.rs  server.rs
crates/reels-core/src/http/: request.rs  response.rs  status.rs
crates/reels-core/src/router/: mod.rs  router.rs
crates/reels-macros/: Cargo.toml
crates/reels-macros/src/: args.rs  expand.rs  lib.rs
crates/reels-url-pattern/: Cargo.toml
crates/reels-url-pattern/src/: lib.rs
examples/: routing.rs  static_file_server.rs
reels-macros/: Cargo.toml
src/: lib.rs  router.rs  server.rs
src/http/: method.rs  mod.rs  request.rs  response.rs  status.rs  version.rs
src/router/: mod.rs  router.rs  url_pattern.rs
