[package]
name = "reels"
version = "0.0.1"
edition = "2021"
authors = ["Mark Zhang <markintoshzzz@gmail.com>"]
description = "HTTP server that runs on the lunatic VM"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic = { git = "https://github.com/lunatic-solutions/lunatic-rs", rev = "0ed5ae8" }
url = "^2.2"
http = "^0.2.8"
httparse = "^1.3.4"
reels-macros = { version = "^0.0.1", path = "./reels-macros" }

[workspace]
members = [
  "reels-macros",
]
