[package]
name = "reels"
version = "0.0.1"
edition = "2021"
authors = ["Mark Zhang <markintoshzzz@gmail.com>"]
description = "HTTP server that runs on the lunatic VM"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic = "^0.10.3"
http = "0.2.8"
httparse = "1.3"
unicode-xid = "0.2.3"
urlencoding = "2.1"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
reels-macros = { version = "^0.0.1", path = "./reels-macros" }

[workspace]
members = [
  "reels-macros",
]
