[package]
name = "reels"
version = "0.0.1"
edition = "2021"
authors = ["Mark Zhang <markintoshzzz@gmail.com>"]
description = "HTTP server that runs on the lunatic VM"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reels-core = { version = "^0.0.1", path = "./crates/reels-core" }
reels-macros = { version = "^0.0.1", path = "./crates/reels-macros" }
reels-url-pattern = { version = "^0.0.1", path = "./crates/reels-url-pattern" }

[workspace]
members = [
  "crates/reels-core",
  "crates/reels-macros",
  "crates/reels-url-pattern",
]
