[package]
name = "reels-core"
version = "0.0.1"
edition = "2021"
authors = ["Mark Zhang <markintoshzzz@gmail.com>"]
description = "Core library for Reels"
license = "MIT"

[dependencies]
reels-url-pattern = { version = "^0.0.1", path = "../reels-url-pattern" }
lunatic = "^0.10.3"
http = "0.2.8"
httparse = "1.3"
unicode-xid = "0.2.3"
urlencoding = "2.1"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
